--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "start": "next start"
   },
   "dependencies": {
+    "cheerio": "^1.0.0-rc.10",
+    "cors": "^2.8.5",
+    "jsonframe-cheerio": "^3.0.1",
     "next": "latest",
     "react": "17.0.2",
     "react-dom": "17.0.2"
