--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
   },
   "dependencies": {
     "cheerio": "^1.0.0-rc.10",
+    "cookie": "^0.4.1",
     "cors": "^2.8.5",
+    "js-cookie": "^3.0.1",
     "jsonframe-cheerio": "^3.0.1",
     "next": "latest",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "universal-cookie": "^4.0.4"
   }
 }
