--- a/package.json
+++ b/package.json
@@ -7,13 +7,11 @@
   },
   "dependencies": {
     "cheerio": "^1.0.0-rc.10",
-    "cookie": "^0.4.1",
     "cors": "^2.8.5",
-    "js-cookie": "^3.0.1",
     "jsonframe-cheerio": "^3.0.1",
     "next": "latest",
+    "nookies": "^2.5.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "universal-cookie": "^4.0.4"
+    "react-dom": "17.0.2"
   }
 }
